# OOHDB

./: README.md
OOHDLib/: CMakeLists.txt
OOHDLib/include/: DatabaseObject.hpp  DynamicObject.hpp  OOHD.hpp  OOHDList.hpp  OOHDQuery.hpp  Query.hpp  QueryResult.hpp  oohd_c_api.h
OOHDLib/src/: DatabaseObject.cpp  OOHD.cpp  OOHDQuery.cpp  Query.cpp  QueryResult.cpp  oohd_c_api.cpp
OOHDLibraryWrapper/: OOHDLibraryWrapper.sln
OOHDLibraryWrapper/OOHDLibraryWrapper/: DatabaseObject.cs  OOHD.cs  OOHDLibraryWrapper.csproj  OOHDNativeMethods.cs  Query.cs  QueryResult.cs
OOHDWrapperTest/: OOHDWrapperTest.sln
OOHDWrapperTest/OOHDWrapperTest/: OOHDWrapperTest.csproj  Program.cs
